--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <div id="tooltip-root"></div>
+    <div id="dialog-root"></div>
   </body>
 </html>
